LEAF-1115: execute automated tests in pipeline
LEAF-1115: execute automated tests in pipeline

Tests now use system property db_host and web_host when constructing
urls.  Added Jenkinsfile pipeline stage for executing tests. Currently, tests
only execute during a PR build.